dialog formatting inc. centering images

--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -9,8 +9,8 @@
     <p>Credits: Aditi Nafde, Matthew Coneys, Kate Court, James Cummings, Fiona Galston, and Tiago Sousa Garcia. With
         thanks to the AHRC, ATNU, and Newcastle University </p>
     <div class="logos">
-        <img src="./assets/AHRC.png" height="50">
-        <img class="NUImage" src="./assets/NU.png" height="50">
+        <img class="logo" src="./assets/AHRC.png" height="50">
+        <img class="logo" src="./assets/NU.png" height="50">
     </div>
 
 </mat-dialog-content>
