--- a/src/app/dialog/dialog.component.scss
+++ b/src/app/dialog/dialog.component.scss
@@ -5,3 +5,20 @@
 .NUImage {
   margin-top: 10px;
 }
+
+mat-dialog-content {
+  background: #fffffc;
+}
+
+
+mat-dialog-actions {
+  justify-content: flex-end;
+}
+
+.logos {
+  justify-content: center;
+}
+
+.logo {
+  margin: 10px;
+}
