correct boolean in feedback form q3

--- a/src/app/feedback/feedback.component.html
+++ b/src/app/feedback/feedback.component.html
@@ -106,12 +106,12 @@
                     <div class="radio-btns">
                     <div class="form-check form-check-inline">
                         <input [(ngModel)]="q3Check" class="form-check-input" id="q3radioYes" name="q3Radio" type="radio"
-                               value=true>
+                               value="yes">
                         <label class="form-check-label" for="q3RadioYes">Yes</label>
                     </div>
                     <div class="form-check form-check-inline">
                         <input [(ngModel)]="q3Check" class="form-check-input" id="q3RadioNo" name="q3Radio" type="radio"
-                               value=false>
+                               value="no">
                         <label class="form-check-label" for="q3RadioNo">No</label>
                     </div>
                     <div class="form-check form-check-inline">
