--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,7 @@
 <div class="container">
     <h1>Login</h1>
+    <button type="button" class="btn btn-primary" (click)="onRegisterClick()">Register</button>
+
     <form (ngSubmit)="onSubmit()"#regForm="ngForm">
       <div class="form-group">
         <label for="email">Email</label>
@@ -16,6 +18,7 @@
       </div>
 
       <button type="submit" class="btn btn-success" [disabled]="!regForm.form.valid">Submit</button>
-
+      
     </form>
+    
 </div>
