--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -24,3 +24,20 @@ h1 {
 .col-sm-10 {
   padding-left: 0;
 }
+
+
+.registerBtn {
+  margin: 10px;
+}
+
+.notReg {
+  margin-top: 35px;
+  text-align: right;
+  padding-right: 0;
+}
+
+.regBtn {
+  margin-top: 20px;
+  text-align: left;
+  padding-left: 0;
+}
