--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,14 +1,15 @@
 <div class="container">
     <nav [hidden]=dialogOpen class="navbar fixed-top">
         <div class="btn-group controls">
-        <button type="button moveLeft" class="btn btn-secondary" (click)="moveLeft()"><img src="./assets/left.svg" height="25"></button>
+        <button type="button" class="btn btn-secondary" (click)="moveLeft()"><img src="./assets/left.svg" height="25"></button>
 
-        <button type="button" class="btn btn-secondary" (click)="moveRight()"><img src="./assets/right.svg"
-                                                                                   height="25"/></button>
+
         <button type="button" class="btn btn-secondary" (click)="moveUp()"><img src="./assets/up.svg"
                                                                                 height="25"/></button>
         <button type="button" class="btn btn-secondary" (click)="moveDown()"><img src="./assets/down.svg"
                                                                             height="25"/></button>
+            <button type="button" class="btn btn-secondary" (click)="moveRight()"><img src="./assets/right.svg"
+                                                                                                                                                                                height="25"/></button>
         </div>
 
     </nav>
