--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -63,6 +63,9 @@
 
             <button type="button" class="btn btn-secondary" (click)=feedbackClicked()><img src="./assets/chat2.svg"
                                                                                            height="25"/></button>
+
+            <button type="button" class="btn btn-secondary" (click)=savePage(true)><img src="./assets/credit-card.svg"
+                                                                                            height="25"/></button>
         </div>
 
         <button type="button" class="btn btn-success right left" (click)=nextPage()><img
