--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,43 +1,22 @@
 <div class="container">
-    <nav [hidden]=dialogOpen class="navbar fixed-top">
-        <div class="btn-group controls">
-        <button type="button" class="btn btn-secondary" (click)="moveLeft()"><img src="./assets/left.svg" height="25"></button>
-
-
-        <button type="button" class="btn btn-secondary" (click)="moveUp()"><img src="./assets/up.svg"
-                                                                                height="25"/></button>
-        <button type="button" class="btn btn-secondary" (click)="moveDown()"><img src="./assets/down.svg"
-                                                                            height="25"/></button>
-            <button type="button" class="btn btn-secondary" (click)="moveRight()"><img src="./assets/right.svg"
-                                                                                                                                                                                height="25"/></button>
-        </div>
-
-    </nav>
 
     <div class="container canvas" [class.newBG]="state">
         <!--[scrollX]="true"-->
         <!--[scrollY]="true">-->
 
-        <div id="canvas-background">
-            <canvas id="myCanvas"></canvas>
+        <div id="canvas-background" [ngStyle]="{ 'background-image': 'url(' + bgImage + ')'}">
+            <canvas id="myCanvas" width="680" height="870"></canvas>
         </div>
-    </div>
 
-    <div  [hidden]=dialogOpen class="btn-group-vertical zoomBtns">
-        <button type="button" class="btn btn-secondary" (click)="zoomIn()"><img src="./assets/zoom_in.svg"
-                                                                                height="25"/></button>
-        <button type="button" class="btn btn-secondary" (click)="zoomOut()"><img src="./assets/zoom_out.svg"
-                                                                                 height="25"/></button>
     </div>
 
     <!--<img src="{{ screen }}" *ngIf="state">-->
 
     <!-- Bottom navbar -->
-    <div [hidden]=dialogOpen class="navbar fixed-bottom container">
+    <div [hidden] = dialogOpen class="navbar fixed-bottom container">
 
         <button type="button" class="btn btn-success" (click)=prevPage()><img src="./assets/chevron-back.svg"
                                                                               height="25"/></button>
-
 
 
         <!--Drawing controls-->
@@ -56,26 +35,26 @@
 
                 <div ngbDropdownMenu class="dropdown-menu">
                     <div class="btn-group-vertical">
-                        <!--          brush width-->
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-secondary" type="button" (click)="decreaseWidth()">-
-                            </button>
-                            <button class="btn btn-secondary non-click"
-                                    onClick="this.blur();">{{canvas.freeDrawingBrush.width}}</button>
-                            <button type="button" class="btn btn-secondary" type="button" (click)="increaseWidth()">+
-                            </button>
-                        </div>
-
-
-                        <button type="button" class="btn btn-secondary" [(colorPicker)]="colour"
-                                [cpPresetColors]="['#000000', '#2889e9', '#FF0000']"
-                                [cpAddColorButton]="true" [cpOKButton]=true [cpCancelButton]=true
-                                [style.background]="colour"
-                                (colorPickerSelect)="changeColour(colour)"><img src="./assets/palette.svg" height="25"/>
+                    <!--          brush width-->
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-secondary" type="button" (click)="decreaseWidth()">-
                         </button>
+                        <button class="btn btn-secondary non-click"
+                                onClick="this.blur();">{{canvas.freeDrawingBrush.width}}</button>
+                        <button type="button" class="btn btn-secondary" type="button" (click)="increaseWidth()">+
+                        </button>
+                    </div>
 
 
-                        <button type="button" class="btn btn-secondary" (click)=clear()>Reset page</button>
+                    <button type="button" class="btn btn-secondary" [(colorPicker)]="colour"
+                            [cpPresetColors]="['#000000', '#2889e9', '#FF0000']"
+                            [cpAddColorButton]="true" [cpOKButton]=true [cpCancelButton]=true
+                            [style.background]="colour"
+                            (colorPickerSelect)="changeColour(colour)"><img src="./assets/palette.svg" height="25"/>
+                    </button>
+
+
+                    <button type="button" class="btn btn-secondary" (click)=clear()>Reset page</button>
                     </div>
 
                 </div>
