--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -48,18 +48,10 @@
 .container {
   max-width: 800px;
 }
-
-
 #canvas-background {
-  left: 0;
-  position: absolute;
-  overflow: scroll;
-  margin: 0;
-  top: 50%;
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
+  max-width: 800px;
+  background-repeat: no-repeat;
 }
-
 
 .footer {
   position: relative;
@@ -82,13 +74,6 @@ button.btn-success.left {
   clear: both;
 }
 
-
-.zoomBtns {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  right: 0;
-}
 
 
 
