--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,40 +1,24 @@
 <div class="container">
-
-    <div class="loginWindow">
     <h1>Login</h1>
-
+    <button type="button" class="btn btn-primary" (click)="onRegisterClick()">Register</button>
 
     <form (ngSubmit)="onSubmit()"#regForm="ngForm">
-      <div class="form-group row">
-        <label for="email" class="col-sm-2 col-form-label col-form-label"><img src="../assets/email-24px.svg"
-                                                                               height="25"/></label>
-          <div class="col-sm-10">
+      <div class="form-group">
+        <label for="email">Email</label>
         <input type="text" class="form-control" id="email"
        required
-       [(ngModel)]="email" name="email" placeholder="Email">
+       [(ngModel)]="email" name="email">
       </div>
-    </div>
-      <div class="form-group row">
-        <label for="password" class="col-sm-2 col-form-label col-form-label"><img src="../assets/lock-24px.svg"
-                                                                                  height="25"/></label>
-         <div class="col-sm-10">
+
+      <div class="form-group">
+        <label for="password">Password</label>
         <input type="text" class="form-control" id="password"
        required
-       [(ngModel)]="password" name="password" placeholder="Password">
-      </div>
+       [(ngModel)]="password" name="password">
       </div>
 
-      <button type="submit" class="btn btn-success btn-lg " [disabled]="!regForm.form.valid">Submit</button>
-        <div class="row">
-            <div class="col notReg">
-                Not registered?
-            </div>
-            <div class="col regBtn">
-                <button type="button" class="btn btn-primary registerBtn" (click)="onRegisterClick()">Sign up here</button>
-            </div>
-        </div>
-
+      <button type="submit" class="btn btn-success" [disabled]="!regForm.form.valid">Submit</button>
+      
     </form>
-</div>
-
+    
 </div>
