--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,11 @@
         <!--[scrollX]="true"-->
         <!--[scrollY]="true">-->
 
-        <div id="canvas-background" [ngStyle]="{ 'background-image': 'url(' + bgImage + ')'}">
+<!--        <div id="canvas-background" [ngStyle]="{ 'background-image': 'url(' + bgImage + ')'}">-->
+<!--            <canvas id="myCanvas" width="680" height="870"></canvas>-->
+<!--        </div>-->
+
+        <div id="canvas-background">
             <canvas id="myCanvas" width="680" height="870"></canvas>
         </div>
 
@@ -18,7 +22,7 @@
         <button type="button" class="btn btn-success" (click)=prevPage()><img src="./assets/chevron-back.svg"
                                                                               height="25"/></button>
 
-
+<button (click)="addBackgroundImage()">Reset</button>
         <!--Drawing controls-->
         <div class="btn-group controls">
             <button type="button" class="btn btn-secondary" (click)=erase()><img src="./assets/erase2w.svg"
