--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -76,4 +76,10 @@ button.btn-success.left {
 
 
 
+.zoomBtns {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 0;
+}
 
