--- a/src/app/page-result/page-result.component.html
+++ b/src/app/page-result/page-result.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <h1>Saved Page</h1>
     <p>Saved: {{transformDate(page.timestamp)}}</p>
-    <p>Page number: {{page.pageNo}}</p>
+    <p>Page number: {{page.pageNo + 1}}</p>
     <div>
         <canvas id="viewCanvas" width="700" height="900"></canvas>
     </div>
