server calls for resume and get page, removal of localstorage use for pages
local storage was being filled up with the pages and errors occurring even after 1 page being added if there were a lot of annotations/drawings. Now must call server for each page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -24,6 +24,8 @@
             <button type="button" class="btn btn-secondary" (click)=erase()><img src="./assets/erase2w.svg"
                                                                                  width="25"/></button>
 
+            <button type="button" class="btn btn-secondary" type="button" (click)=resume()>resume</button>                                       
+
             <button type="button" class="btn btn-secondary" type="button" (click)=enableDraw()><img
                     src="./assets/edit.svg"
                     height="25"/></button>
