remove resume button
resume automatically happens on launch

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,9 +22,7 @@
         <!--Drawing controls-->
         <div class="btn-group controls">
             <button type="button" class="btn btn-secondary" (click)=erase()><img src="./assets/erase2w.svg"
-                                                                                 width="25"/></button>
-
-            <button type="button" class="btn btn-secondary" type="button" (click)=resume()>resume</button>                                       
+                                                                                 width="25"/></button>                                  
 
             <button type="button" class="btn btn-secondary" type="button" (click)=enableDraw()><img
                     src="./assets/edit.svg"
@@ -66,7 +64,7 @@
             <button type="button" class="btn btn-secondary" (click)=feedbackClicked()><img src="./assets/chat2.svg"
                                                                                            height="25"/></button>
 
-            <button type="button" class="btn btn-secondary" (click)=savePage(true)><img src="./assets/credit-card.svg"
+            <button type="button" class="btn btn-secondary" (click)=savePage()><img src="./assets/credit-card.svg"
                                                                                             height="25"/></button>
         </div>
 
