--- a/src/app/page-result/page-result.component.html
+++ b/src/app/page-result/page-result.component.html
@@ -2,8 +2,8 @@
     <h1>Saved Page</h1>
     <p>Saved: {{transformDate(page.timestamp)}}</p>
     <p>Page number: {{page.pageNo}}</p>
-    <div>
-        <canvas id="viewCanvas" width="700" height="900"></canvas>
+    <div id="canvas-background" [ngStyle]="{ 'background-image': 'url(' + bgImage + ')', 'background-repeat': 'no-repeat'}">
+        <canvas id="myCanvas" width="680" height="870"></canvas>
     </div>
 
     <div class="btn-group" role="group">
