type on feedback

--- a/src/app/feedback/feedback.component.html
+++ b/src/app/feedback/feedback.component.html
@@ -3,9 +3,9 @@
         <h4>Thank you for using the app. We'd be grateful for your feedback for our research. Please select an option
             for every question.</h4>
     </div>
-    <p> Please note: If you would like to report an issue, the following are already noted and will be of importance during any future release cycles </p>
+    <p> Please note, if you would like to report an issue, the following are already noted and will be of importance during any future release cycles: </p>
         <ul>
-            <li>Auto-adust for various screen sizes, app is currently optimised for ipad and does not scale</li>
+            <li>Auto-adjust for various screen sizes, app is currently optimised for iPad and does not scale</li>
             <li>Zoom in/out</li>
             <li>Pan around the screen</li>
             <li>Different pen options</li>
