--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -64,7 +64,7 @@
             <button type="button" class="btn btn-secondary" (click)=feedbackClicked()><img src="./assets/chat2.svg"
                                                                                            height="25"/></button>
 
-            <button type="button" class="btn btn-secondary" (click)=savePage()><img src="./assets/credit-card.svg"
+            <button type="button" class="btn btn-secondary" (click)=savePage()><img src="./assets/save.svg"
                                                                                             height="25"/></button>
         </div>
 
