--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -61,7 +61,7 @@
             </div>
             <!-- end of colour and size drop-up-->
 
-            <button type="button" class="btn btn-secondary" (click)=feedbackClicked()><img src="./assets/chat2.svg"
+            <button type="button" class="btn btn-secondary" (click)=feedbackClicked()><img src="./assets/thumbs.svg"
                                                                                            height="25"/></button>
 
             <button type="button" class="btn btn-secondary" (click)=savePage()><img src="./assets/save.svg"
