--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,7 +6,7 @@
 
         <form (ngSubmit)="onSubmit()"#regForm="ngForm">
             <div class="form-group row">
-                <label for="email" class="col-sm-2 col-form-label col-form-label"><img src="../assets/email-24px.svg"
+                <label for="email" class="col-sm-2 col-form-label col-form-label"><img src="../assets/mail.svg"
                                                                                        height="25"/></label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" id="email"
@@ -15,7 +15,7 @@
                 </div>
             </div>
             <div class="form-group row">
-                <label for="password" class="col-sm-2 col-form-label col-form-label"><img src="../assets/lock-24px.svg"
+                <label for="password" class="col-sm-2 col-form-label col-form-label"><img src="../assets/lock.svg"
                                                                                           height="25"/></label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" id="password"
