--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -21,8 +21,7 @@
 
         <!--Drawing controls-->
         <div class="btn-group controls">
-            <button type="button" class="btn btn-secondary" (click)=erase()><img src="./assets/erase2w.svg"
-                                                                                 width="25"/></button>                                  
+
 
             <button type="button" class="btn btn-secondary" type="button" (click)=enableDraw()><img
                     src="./assets/edit.svg"
@@ -60,12 +59,19 @@
                 </div>
             </div>
             <!-- end of colour and size drop-up-->
+            <button type="button" class="btn btn-secondary" (click)=erase()><img src="./assets/erase2w.svg"
+                                                                                 width="25"/></button>
+        </div>
 
+        <div class="btn-group controls">
             <button type="button" class="btn btn-secondary" (click)=feedbackClicked()><img src="./assets/thumbs.svg"
                                                                                            height="25"/></button>
 
             <button type="button" class="btn btn-secondary" (click)=savePage()><img src="./assets/save.svg"
                                                                                             height="25"/></button>
+
+            <button type="button" class="btn btn-secondary" ><img src="./assets/log-out.svg"
+                                                                                    height="25"/></button>
         </div>
 
         <button type="button" class="btn btn-success right left" (click)=nextPage()><img
