button group formatting

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -69,10 +69,10 @@ button.btn-success.left {
   float: left;
 }
 
-.btn-group.controls {
- margin: auto;
-  clear: both;
-}
+//.btn-group.controls {
+// margin: auto;
+//  clear: both;
+//}
 
 
 
