--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -70,7 +70,7 @@
             <button type="button" class="btn btn-secondary" (click)=savePage()><img src="./assets/save.svg"
                                                                                             height="25"/></button>
 
-            <button type="button" class="btn btn-secondary" ><img src="./assets/log-out.svg"
+            <button type="button" class="btn btn-secondary" (click)=logout()><img src="./assets/log-out.svg"
                                                                                     height="25"/></button>
         </div>
 
